[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>", "joe@heliax.dev"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase2"
edition = "2021"
homepage = "https://github.com/heliaxdev/masp-phase2"
license = "MIT/Apache-2.0"
name = "masp-phase2"
repository = "https://github.com/heliaxdev/masp-phase2"
version = "0.2.4"

[dependencies]
bellman = "0.13.1"
blake2 = "0.10.5"
bls12_381 = "0.7.0"
byteorder = "1"
crossbeam = "0.8.1"
ff = "0.12.1"
group = "0.12.1"
num_cpus = "1"
pairing = "0.22.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
itertools = "0.10.3"
rayon = "1.5.1"

[profile.release]
codegen-units = 1
lto = true
